plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
id 'jacoco'
    id 'org.sonarqube' version '6.0.1.5171'
}

group = 'com.sollite'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ── Spring Boot Starters ──
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'  // WebClient (한투 API)

    // ── Oracle JDBC ──
    implementation 'com.oracle.database.jdbc:ojdbc11:23.6.0.24.10'

    // ── Flyway (Oracle) ──
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-oracle'

    // ── QueryDSL ──
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    // ── JWT ──
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // ── Lombok ──
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // ── MapStruct ──
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // ── API Documentation ──
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // ── DevTools ──
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ── Test ──
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // ── Websocket ──
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

// ── Jacoco ──
jacoco {
    toolVersion = '0.8.12'
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}

// ── SonarQube ──
sonarqube {
    properties {
        property 'sonar.projectKey', 'sol-lite-backend'
        property 'sonar.projectName', 'SOL Lite Backend'
        property 'sonar.coverage.jacoco.xmlReportPaths', "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    }
}

// ── QueryDSL Q클래스 생성 경로 ──
def querydslDir = layout.buildDirectory.dir("generated/querydsl")

sourceSets {
    main {
        java {
            srcDirs += querydslDir
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.generatedSourceOutputDirectory.set(querydslDir)
}

clean {
    delete querydslDir
}
